--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,100 @@
+body, html {
+	overflow-x:hidden;
+}
+
 body {
-  font-family: "Open Sans", sans-serif;
-  color: #444444;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 15px;
+	letter-spacing: 1px;
+	line-height: 1.5;
+	color: #ffffff;
+	background-color: #1e1e1e;
+}
+
+
+.glitch:hover {
+	font-weight: bold;
+	text-transform: inherit;
+	text-shadow: 0.07em 0.2em 0.2em #00fffc, -0.03em -0.04em 0 #fc00ff, 0.025em 0.04em 0 #fffc00;
+	animation: glitch 725ms infinite;
+}
+  
+@keyframes glitch {
+	0% {
+	  text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+		0.025em 0.04em 0 #fffc00;
+	}
+	15% {
+	  text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff,
+		0.025em 0.04em 0 #fffc00;
+	}
+	16% {
+	  text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+		-0.05em -0.05em 0 #fffc00;
+	}
+	49% {
+	  text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff,
+		-0.05em -0.05em 0 #fffc00;
+	}
+	50% {
+	  text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+		0 -0.04em 0 #fffc00;
+	}
+	99% {
+	  text-shadow: 0.05em 0.035em 0 #00fffc, 0.03em 0 0 #fc00ff,
+		0 -0.04em 0 #fffc00;
+	}
+	100% {
+	  text-shadow: -0.05em 0 0 #00fffc, -0.025em -0.04em 0 #fc00ff,
+		-0.04em -0.025em 0 #fffc00;
+	}
+}
+
+.navbar {
+	position: absolute;
+	width: 100%;
+	text-align: left;
+	top: 0px;
+}
+
+.navbar p {
+	color: #FFF;
+	margin-left: 100px;
+	font-weight: 700;
+	font-size: 1.5em;
+	display: inline-block;
+	padding-right: 600px;
+	text-decoration: none;
+}
+
+.link{
+	right: 0px;
+	position: relative;
+	color: #FFF;
+	width: auto;
+	margin-left: 100px;
+	font-weight: 500;
+	font-size: 1.1em;
+	display:inline-block;
+	text-transform: uppercase;
+	text-align: right;
+	text-decoration: none;
+}
+
+.link:hover {
+	color: #FF9900;
+}
+
+
+
+
+.footer {
+	background-color: black;
+	color: #FF9900;
+	text-align: center;
+	width: 100%;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
